Fix alphabetical tab style on narrow screen

--- a/resource/css/skosmos.css
+++ b/resource/css/skosmos.css
@@ -618,7 +618,7 @@ body {
       flex-wrap: nowrap;
     }
 
-    #sidebar-tabs.wide .nav-item:first-of-type {
+    #sidebar-tabs.wide #alphabetical {
       max-width: 40px;
     }
 
